--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 
     <link href="style.css" rel="stylesheet" />
-    <script src="country.js"></script>
 
+    
 </head>
 
 <body id="Color1">
@@ -17,12 +17,14 @@
                 <option value="USA">USA</option>
                 <option value="Mexico">Mexico</option>
                 <option value="Algeria">Algeria</option>
+                <option value="Tuvalu">Tuvalu</option>
+                <option value="Barbados">Barbados</option>
             </select>
             <button onclick="SwitchCountry()">Swap Country</button>
         </div>
     </div>
-
-
+    
+    <script src="country.js"></script>
 </body>
 
 </html>
